battlepass fixes
Bugfixes:
* Battlepass: Fixed disabling donator in-game tag not disabling the flyout scoreboard design for player and xp booster color in end screen
* End Screen: Fixed battlepass reward earned notification not showing

--- a/content/dota_addons/dota_imba_reborn/panorama/styles/custom_game/multiteam_flyout_scoreboard.css
+++ b/content/dota_addons/dota_imba_reborn/panorama/styles/custom_game/multiteam_flyout_scoreboard.css
@@ -397,10 +397,10 @@
 #ImbaXP23
 {
 	font-family: Radiance-Semibold,FZKai-Z03,TH Sarabun New,YDYGO 540;
-	font-size: 11.5px;
+	font-size: 13px;
 	color: #fefeff;
 	align: center bottom;
-	margin-bottom: -2.3px;
+	margin-bottom: -1px;
 }
 
 #ImbaXPEarned0,
